gcc/testsuite/rust/rustc/ui/generics/issue-95208.rs
//@ run-rustfix

#[allow(unused)]
struct Struct<T>(T);

impl<T> Struct<T> where T:: std::fmt::Display {
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }
}

fn main() {}

